fix button line spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1741,7 +1741,7 @@ ul.list-for-project{
 	display: block;
     min-width: 7.5rem;
     height: 2.75rem;
-    line-height: 2.75rem;
+    line-height: 1.2rem;
     padding: 0 1.25rem 0 1.45rem;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
